Tried to fix layout issues and added readme.md

--- a/week-09-hw/css/style.css
+++ b/week-09-hw/css/style.css
@@ -1,5 +1,6 @@
 .page-heading {
   text-align: center;
+  float: right;
 }
 
 h1 {
@@ -15,6 +16,10 @@ h1 {
 }
 
 .image {
+  float: left;
+}
+
+img {
   float: left;
 }
 
@@ -108,4 +113,5 @@ header {
   padding-top: 0;
   padding-right: .5em;
   padding-bottom: .5em;
+  float: right;
 }
